# stock-analysis

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: add-collector.md  add-indicator.md  backtest.md  improve-prediction.md  scan.md
src/: __init__.py
src/pharma_stock/: __init__.py
src/pharma_stock/analysis/: __init__.py  bottom_signal.py  catalyst_detector.py  fundamental.py  pipeline_impact.py  technical.py
src/pharma_stock/cli/: __init__.py  main.py
src/pharma_stock/cli/commands/: __init__.py  analyze.py  collect.py  companies.py  predict.py  scan.py
src/pharma_stock/collectors/: __init__.py  base.py  ir_news_collector.py  pipeline_collector.py  pmda_collector.py  stock_collector.py
src/pharma_stock/config/: __init__.py  companies.py  settings.py
src/pharma_stock/dev/: __init__.py  agents.py  backtest_runner.py  tasks.py
src/pharma_stock/prediction/: __init__.py  base.py  ensemble.py  features.py  lightgbm_predictor.py  price_range_predictor.py  xgboost_predictor.py
src/pharma_stock/storage/: __init__.py  database.py  models.py
src/pharma_stock/utils/: __init__.py  logging.py
tests/: conftest.py
tests/unit/: test_companies.py  test_features.py
